# flex

./: Makefile.am  configure.ac
.github/workflows/: build.yml
examples/: local.mk
examples/fastwc/: local.mk
examples/manual/: local.mk
src/: Makefile.am  dfa.c  flexdef.h  local.mk  misc.c  nfa.c  parse.y  scan.l
tests/: Makefile.am
tools/: local.mk
